# LiuClaw

./: .gitignore  README.md  pyproject.toml
.liuclaw/team/: config.json
agent_core/: __init__.py  agent-core模块.md  agent.py  agent_loop.py  trace.py  types.py
ai/: __init__.py  ai模块.md  client.py  config.py  model_registry.py  models.py  options.py  reasoning.py  registry.py  session.py  types.py
ai/converters/: __init__.py  capabilities.py  messages.py  thinking.py
ai/providers/: __init__.py  anthropic.py  base.py  openai.py  zhipu.py
ai/utils/: context_window.py  streaming.py
coding_agent/: __init__.py  coding-agent模块.md  main.py
coding_agent/cli/: __init__.py  parser.py
coding_agent/config/: paths.py
coding_agent/core/: agent_session.py  extensions_runtime.py  model_registry.py  resource_loader.py  runtime_assembly.py  session_manager.py  settings_manager.py  trace.py  types.py
coding_agent/core/compaction/: branch_summary.py  compactor.py  coordinator.py  triggers.py
coding_agent/core/multi_agent/: __init__.py  message_bus.py  protocols.py  (+3 more)
evals/: __init__.py  aggregation.py  benchmarks.py  cli.py  experiments.py  runner.py  stream_builder.py  tasks.py  test_eval_harness.py  test_eval_v2.py  types.py
evals/baselines/: coding_agent_v2.json
mom/: context_sync.py  events.py  feishu.py  main.py  runner.py  store.py  types.py
tests/: test_agent_loop.py  test_client.py  test_coding_agent.py  test_model_registry.py  test_mom.py  test_multi_agent_foundation.py  test_protocol.py  test_reasoning.py  test_registry_config.py  test_zhipu_provider.py
(+5 files in other folders)
